# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/dtos.ActorDTO"
                         }
                     }
                 ],
@@ -50,7 +50,17 @@
                 ],
                 "summary": "GetAllActorsWithMovies",
                 "operationId": "get-actor-movie",
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Actor"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/actors/{id}": {
@@ -75,7 +85,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/dtos.ActorDTO"
                         }
                     },
                     {
@@ -89,9 +99,6 @@
                 "responses": {
                     "400": {
                         "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "Not Found"
                     }
                 }
             },
@@ -142,7 +149,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Actor"
+                            "$ref": "#/definitions/dtos.ActorDTO"
                         }
                     },
                     {
@@ -164,9 +171,9 @@
             }
         },
         "/auth/sign-in": {
-            "post": {
+            "get": {
                 "tags": [
-                    "movies"
+                    "auth"
                 ],
                 "summary": "SignInUser",
                 "operationId": "sing-in-user",
@@ -187,6 +194,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/usersauth.jsonTokenErrorWrapper"
+                        }
+                    },
                     "404": {
                         "description": "Not Found"
                     }
@@ -212,6 +225,9 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
                     "400": {
                         "description": "Bad Request"
                     }
@@ -240,7 +256,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Movie"
+                            "$ref": "#/definitions/dtos.MovieDTO"
                         }
                     }
                 ],
@@ -254,7 +270,7 @@
         "/movies": {
             "get": {
                 "tags": [
-                    "actors"
+                    "movies"
                 ],
                 "summary": "GetMoviesByName",
                 "operationId": "get-sorted-movies",
@@ -267,7 +283,14 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.MovieDTO"
+                        }
+                    }
+                }
             }
         },
         "/movies/actors/{actor_name}": {
@@ -275,7 +298,7 @@
                 "tags": [
                     "movies"
                 ],
-                "summary": "GetMoviesByName",
+                "summary": "GetMoviesByActorName",
                 "operationId": "get-movies-by-actor-name",
                 "parameters": [
                     {
@@ -287,6 +310,15 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dtos.MovieDTO"
+                            }
+                        }
+                    },
                     "404": {
                         "description": "Not Found"
                     }
@@ -315,7 +347,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Movie"
+                            "$ref": "#/definitions/dtos.MovieDTO"
                         }
                     },
                     {
@@ -329,9 +361,6 @@
                 "responses": {
                     "400": {
                         "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "Not Found"
                     }
                 }
             },
@@ -382,7 +411,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Movie"
+                            "$ref": "#/definitions/dtos.MovieDTO"
                         }
                     },
                     {
@@ -405,11 +434,45 @@
         }
     },
     "definitions": {
+        "dtos.ActorDTO": {
+            "type": "object",
+            "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sex": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.MovieDTO": {
+            "type": "object",
+            "properties": {
+                "desctiption": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Actor": {
             "type": "object",
             "properties": {
                 "birth_date": {
                     "type": "string"
+                },
+                "movies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Movie"
+                    }
                 },
                 "name": {
                     "type": "string"
@@ -446,6 +509,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "usersauth.jsonTokenErrorWrapper": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
